treactor/httproute_treactor-ui.yaml
# Provided
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata: # kpt-merge: treactor/treactor-ui
  name: treactor-ui
  namespace: treactor
  annotations:
    internal.kpt.dev/upstream-identifier: 'gateway.networking.k8s.io|HTTPRoute|treactor|treactor-ui'
spec:
  parentRefs:
  - name: gateway
  hostnames: ["treactor.ioto.pe"]
  rules:
  - matches:
    - path:
        type: Exact
        value: /
    - path:
        type: Exact
        value: /index.html
    - path:
        type: Exact
        value: /robot.txt
    - path:
        type: PathPrefix
        value: /static
    - path:
        type: PathPrefix
        value: /treact/reactions
    - path: # the UI node is provided
        type: PathPrefix
        value: /treact/nodes/500/info
    backendRefs:
    - name: treactor-ui
      port: 80
