treactor/ingress_treactor.yaml
# Generate by gcr.io/treactor/kpt-fn/gateway-api
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: treactor
  annotations:
    config.kubernetes.io/managed-by: fn:gen:gcr.io/treactor/kpt-fn/gateway-api
  namespace: treactor
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: treactor-ui
            port:
              number: 80
        path: /index.html
        pathType: Exact
      - backend:
          service:
            name: treactor-ui
            port:
              number: 80
        path: /robot.txt
        pathType: Exact
      - backend:
          service:
            name: treactor-ui
            port:
              number: 80
        path: /
        pathType: Exact
      - backend:
          service:
            name: atom-fm
            port:
              number: 80
        path: /treact/nodes/100/info
        pathType: Prefix
      - backend:
          service:
            name: atom-md
            port:
              number: 80
        path: /treact/nodes/101/info
        pathType: Prefix
      - backend:
          service:
            name: atom-no
            port:
              number: 80
        path: /treact/nodes/102/info
        pathType: Prefix
      - backend:
          service:
            name: atom-lr
            port:
              number: 80
        path: /treact/nodes/103/info
        pathType: Prefix
      - backend:
          service:
            name: atom-rf
            port:
              number: 80
        path: /treact/nodes/104/info
        pathType: Prefix
      - backend:
          service:
            name: atom-db
            port:
              number: 80
        path: /treact/nodes/105/info
        pathType: Prefix
      - backend:
          service:
            name: atom-sg
            port:
              number: 80
        path: /treact/nodes/106/info
        pathType: Prefix
      - backend:
          service:
            name: atom-bh
            port:
              number: 80
        path: /treact/nodes/107/info
        pathType: Prefix
      - backend:
          service:
            name: atom-hs
            port:
              number: 80
        path: /treact/nodes/108/info
        pathType: Prefix
      - backend:
          service:
            name: atom-mt
            port:
              number: 80
        path: /treact/nodes/109/info
        pathType: Prefix
      - backend:
          service:
            name: atom-ds
            port:
              number: 80
        path: /treact/nodes/110/info
        pathType: Prefix
      - backend:
          service:
            name: atom-rg
            port:
              number: 80
        path: /treact/nodes/111/info
        pathType: Prefix
      - backend:
          service:
            name: atom-cn
            port:
              number: 80
        path: /treact/nodes/112/info
        pathType: Prefix
      - backend:
          service:
            name: atom-nh
            port:
              number: 80
        path: /treact/nodes/113/info
        pathType: Prefix
      - backend:
          service:
            name: atom-fl
            port:
              number: 80
        path: /treact/nodes/114/info
        pathType: Prefix
      - backend:
          service:
            name: atom-mc
            port:
              number: 80
        path: /treact/nodes/115/info
        pathType: Prefix
      - backend:
          service:
            name: atom-lv
            port:
              number: 80
        path: /treact/nodes/116/info
        pathType: Prefix
      - backend:
          service:
            name: atom-ts
            port:
              number: 80
        path: /treact/nodes/117/info
        pathType: Prefix
      - backend:
          service:
            name: atom-og
            port:
              number: 80
        path: /treact/nodes/118/info
        pathType: Prefix
      - backend:
          service:
            name: bond-1
            port:
              number: 80
        path: /treact/nodes/201/info
        pathType: Prefix
      - backend:
          service:
            name: bond-2
            port:
              number: 80
        path: /treact/nodes/202/info
        pathType: Prefix
      - backend:
          service:
            name: bond-n
            port:
              number: 80
        path: /treact/nodes/299/info
        pathType: Prefix
      - backend:
          service:
            name: treactor-ui
            port:
              number: 80
        path: /treact/nodes/500/info
        pathType: Prefix
      - backend:
          service:
            name: treactor-api
            port:
              number: 80
        path: /treact/nodes/501/info
        pathType: Prefix
      - backend:
          service:
            name: atom-ne
            port:
              number: 80
        path: /treact/nodes/10/info
        pathType: Prefix
      - backend:
          service:
            name: atom-na
            port:
              number: 80
        path: /treact/nodes/11/info
        pathType: Prefix
      - backend:
          service:
            name: atom-mg
            port:
              number: 80
        path: /treact/nodes/12/info
        pathType: Prefix
      - backend:
          service:
            name: atom-al
            port:
              number: 80
        path: /treact/nodes/13/info
        pathType: Prefix
      - backend:
          service:
            name: atom-si
            port:
              number: 80
        path: /treact/nodes/14/info
        pathType: Prefix
      - backend:
          service:
            name: atom-p
            port:
              number: 80
        path: /treact/nodes/15/info
        pathType: Prefix
      - backend:
          service:
            name: atom-s
            port:
              number: 80
        path: /treact/nodes/16/info
        pathType: Prefix
      - backend:
          service:
            name: atom-cl
            port:
              number: 80
        path: /treact/nodes/17/info
        pathType: Prefix
      - backend:
          service:
            name: atom-ar
            port:
              number: 80
        path: /treact/nodes/18/info
        pathType: Prefix
      - backend:
          service:
            name: atom-k
            port:
              number: 80
        path: /treact/nodes/19/info
        pathType: Prefix
      - backend:
          service:
            name: atom-ca
            port:
              number: 80
        path: /treact/nodes/20/info
        pathType: Prefix
      - backend:
          service:
            name: atom-sc
            port:
              number: 80
        path: /treact/nodes/21/info
        pathType: Prefix
      - backend:
          service:
            name: atom-ti
            port:
              number: 80
        path: /treact/nodes/22/info
        pathType: Prefix
      - backend:
          service:
            name: atom-v
            port:
              number: 80
        path: /treact/nodes/23/info
        pathType: Prefix
      - backend:
          service:
            name: atom-cr
            port:
              number: 80
        path: /treact/nodes/24/info
        pathType: Prefix
      - backend:
          service:
            name: atom-mn
            port:
              number: 80
        path: /treact/nodes/25/info
        pathType: Prefix
      - backend:
          service:
            name: atom-fe
            port:
              number: 80
        path: /treact/nodes/26/info
        pathType: Prefix
      - backend:
          service:
            name: atom-co
            port:
              number: 80
        path: /treact/nodes/27/info
        pathType: Prefix
      - backend:
          service:
            name: atom-ni
            port:
              number: 80
        path: /treact/nodes/28/info
        pathType: Prefix
      - backend:
          service:
            name: atom-cu
            port:
              number: 80
        path: /treact/nodes/29/info
        pathType: Prefix
      - backend:
          service:
            name: atom-zn
            port:
              number: 80
        path: /treact/nodes/30/info
        pathType: Prefix
      - backend:
          service:
            name: atom-ga
            port:
              number: 80
        path: /treact/nodes/31/info
        pathType: Prefix
      - backend:
          service:
            name: atom-ge
            port:
              number: 80
        path: /treact/nodes/32/info
        pathType: Prefix
      - backend:
          service:
            name: atom-as
            port:
              number: 80
        path: /treact/nodes/33/info
        pathType: Prefix
      - backend:
          service:
            name: atom-se
            port:
              number: 80
        path: /treact/nodes/34/info
        pathType: Prefix
      - backend:
          service:
            name: atom-br
            port:
              number: 80
        path: /treact/nodes/35/info
        pathType: Prefix
      - backend:
          service:
            name: atom-kr
            port:
              number: 80
        path: /treact/nodes/36/info
        pathType: Prefix
      - backend:
          service:
            name: atom-rb
            port:
              number: 80
        path: /treact/nodes/37/info
        pathType: Prefix
      - backend:
          service:
            name: atom-sr
            port:
              number: 80
        path: /treact/nodes/38/info
        pathType: Prefix
      - backend:
          service:
            name: atom-y
            port:
              number: 80
        path: /treact/nodes/39/info
        pathType: Prefix
      - backend:
          service:
            name: atom-zr
            port:
              number: 80
        path: /treact/nodes/40/info
        pathType: Prefix
      - backend:
          service:
            name: atom-nb
            port:
              number: 80
        path: /treact/nodes/41/info
        pathType: Prefix
      - backend:
          service:
            name: atom-mo
            port:
              number: 80
        path: /treact/nodes/42/info
        pathType: Prefix
      - backend:
          service:
            name: atom-tc
            port:
              number: 80
        path: /treact/nodes/43/info
        pathType: Prefix
      - backend:
          service:
            name: atom-ru
            port:
              number: 80
        path: /treact/nodes/44/info
        pathType: Prefix
      - backend:
          service:
            name: atom-rh
            port:
              number: 80
        path: /treact/nodes/45/info
        pathType: Prefix
      - backend:
          service:
            name: atom-pd
            port:
              number: 80
        path: /treact/nodes/46/info
        pathType: Prefix
      - backend:
          service:
            name: atom-ag
            port:
              number: 80
        path: /treact/nodes/47/info
        pathType: Prefix
      - backend:
          service:
            name: atom-cd
            port:
              number: 80
        path: /treact/nodes/48/info
        pathType: Prefix
      - backend:
          service:
            name: atom-in
            port:
              number: 80
        path: /treact/nodes/49/info
        pathType: Prefix
      - backend:
          service:
            name: atom-sn
            port:
              number: 80
        path: /treact/nodes/50/info
        pathType: Prefix
      - backend:
          service:
            name: atom-sb
            port:
              number: 80
        path: /treact/nodes/51/info
        pathType: Prefix
      - backend:
          service:
            name: atom-te
            port:
              number: 80
        path: /treact/nodes/52/info
        pathType: Prefix
      - backend:
          service:
            name: atom-i
            port:
              number: 80
        path: /treact/nodes/53/info
        pathType: Prefix
      - backend:
          service:
            name: atom-xe
            port:
              number: 80
        path: /treact/nodes/54/info
        pathType: Prefix
      - backend:
          service:
            name: atom-cs
            port:
              number: 80
        path: /treact/nodes/55/info
        pathType: Prefix
      - backend:
          service:
            name: atom-ba
            port:
              number: 80
        path: /treact/nodes/56/info
        pathType: Prefix
      - backend:
          service:
            name: atom-la
            port:
              number: 80
        path: /treact/nodes/57/info
        pathType: Prefix
      - backend:
          service:
            name: atom-ce
            port:
              number: 80
        path: /treact/nodes/58/info
        pathType: Prefix
      - backend:
          service:
            name: atom-pr
            port:
              number: 80
        path: /treact/nodes/59/info
        pathType: Prefix
      - backend:
          service:
            name: atom-nd
            port:
              number: 80
        path: /treact/nodes/60/info
        pathType: Prefix
      - backend:
          service:
            name: atom-pm
            port:
              number: 80
        path: /treact/nodes/61/info
        pathType: Prefix
      - backend:
          service:
            name: atom-sm
            port:
              number: 80
        path: /treact/nodes/62/info
        pathType: Prefix
      - backend:
          service:
            name: atom-eu
            port:
              number: 80
        path: /treact/nodes/63/info
        pathType: Prefix
      - backend:
          service:
            name: atom-gd
            port:
              number: 80
        path: /treact/nodes/64/info
        pathType: Prefix
      - backend:
          service:
            name: atom-tb
            port:
              number: 80
        path: /treact/nodes/65/info
        pathType: Prefix
      - backend:
          service:
            name: atom-dy
            port:
              number: 80
        path: /treact/nodes/66/info
        pathType: Prefix
      - backend:
          service:
            name: atom-ho
            port:
              number: 80
        path: /treact/nodes/67/info
        pathType: Prefix
      - backend:
          service:
            name: atom-er
            port:
              number: 80
        path: /treact/nodes/68/info
        pathType: Prefix
      - backend:
          service:
            name: atom-tm
            port:
              number: 80
        path: /treact/nodes/69/info
        pathType: Prefix
      - backend:
          service:
            name: atom-yb
            port:
              number: 80
        path: /treact/nodes/70/info
        pathType: Prefix
      - backend:
          service:
            name: atom-lu
            port:
              number: 80
        path: /treact/nodes/71/info
        pathType: Prefix
      - backend:
          service:
            name: atom-hf
            port:
              number: 80
        path: /treact/nodes/72/info
        pathType: Prefix
      - backend:
          service:
            name: atom-ta
            port:
              number: 80
        path: /treact/nodes/73/info
        pathType: Prefix
      - backend:
          service:
            name: atom-w
            port:
              number: 80
        path: /treact/nodes/74/info
        pathType: Prefix
      - backend:
          service:
            name: atom-re
            port:
              number: 80
        path: /treact/nodes/75/info
        pathType: Prefix
      - backend:
          service:
            name: atom-os
            port:
              number: 80
        path: /treact/nodes/76/info
        pathType: Prefix
      - backend:
          service:
            name: atom-ir
            port:
              number: 80
        path: /treact/nodes/77/info
        pathType: Prefix
      - backend:
          service:
            name: atom-pt
            port:
              number: 80
        path: /treact/nodes/78/info
        pathType: Prefix
      - backend:
          service:
            name: atom-au
            port:
              number: 80
        path: /treact/nodes/79/info
        pathType: Prefix
      - backend:
          service:
            name: atom-hg
            port:
              number: 80
        path: /treact/nodes/80/info
        pathType: Prefix
      - backend:
          service:
            name: atom-tl
            port:
              number: 80
        path: /treact/nodes/81/info
        pathType: Prefix
      - backend:
          service:
            name: atom-pb
            port:
              number: 80
        path: /treact/nodes/82/info
        pathType: Prefix
      - backend:
          service:
            name: atom-bi
            port:
              number: 80
        path: /treact/nodes/83/info
        pathType: Prefix
      - backend:
          service:
            name: atom-po
            port:
              number: 80
        path: /treact/nodes/84/info
        pathType: Prefix
      - backend:
          service:
            name: atom-at
            port:
              number: 80
        path: /treact/nodes/85/info
        pathType: Prefix
      - backend:
          service:
            name: atom-rn
            port:
              number: 80
        path: /treact/nodes/86/info
        pathType: Prefix
      - backend:
          service:
            name: atom-fr
            port:
              number: 80
        path: /treact/nodes/87/info
        pathType: Prefix
      - backend:
          service:
            name: atom-ra
            port:
              number: 80
        path: /treact/nodes/88/info
        pathType: Prefix
      - backend:
          service:
            name: atom-ac
            port:
              number: 80
        path: /treact/nodes/89/info
        pathType: Prefix
      - backend:
          service:
            name: atom-th
            port:
              number: 80
        path: /treact/nodes/90/info
        pathType: Prefix
      - backend:
          service:
            name: atom-pa
            port:
              number: 80
        path: /treact/nodes/91/info
        pathType: Prefix
      - backend:
          service:
            name: atom-u
            port:
              number: 80
        path: /treact/nodes/92/info
        pathType: Prefix
      - backend:
          service:
            name: atom-np
            port:
              number: 80
        path: /treact/nodes/93/info
        pathType: Prefix
      - backend:
          service:
            name: atom-pu
            port:
              number: 80
        path: /treact/nodes/94/info
        pathType: Prefix
      - backend:
          service:
            name: atom-am
            port:
              number: 80
        path: /treact/nodes/95/info
        pathType: Prefix
      - backend:
          service:
            name: atom-cm
            port:
              number: 80
        path: /treact/nodes/96/info
        pathType: Prefix
      - backend:
          service:
            name: atom-bk
            port:
              number: 80
        path: /treact/nodes/97/info
        pathType: Prefix
      - backend:
          service:
            name: atom-cf
            port:
              number: 80
        path: /treact/nodes/98/info
        pathType: Prefix
      - backend:
          service:
            name: atom-es
            port:
              number: 80
        path: /treact/nodes/99/info
        pathType: Prefix
      - backend:
          service:
            name: atom-h
            port:
              number: 80
        path: /treact/nodes/1/info
        pathType: Prefix
      - backend:
          service:
            name: atom-he
            port:
              number: 80
        path: /treact/nodes/2/info
        pathType: Prefix
      - backend:
          service:
            name: atom-li
            port:
              number: 80
        path: /treact/nodes/3/info
        pathType: Prefix
      - backend:
          service:
            name: atom-be
            port:
              number: 80
        path: /treact/nodes/4/info
        pathType: Prefix
      - backend:
          service:
            name: atom-b
            port:
              number: 80
        path: /treact/nodes/5/info
        pathType: Prefix
      - backend:
          service:
            name: atom-c
            port:
              number: 80
        path: /treact/nodes/6/info
        pathType: Prefix
      - backend:
          service:
            name: atom-n
            port:
              number: 80
        path: /treact/nodes/7/info
        pathType: Prefix
      - backend:
          service:
            name: atom-o
            port:
              number: 80
        path: /treact/nodes/8/info
        pathType: Prefix
      - backend:
          service:
            name: atom-f
            port:
              number: 80
        path: /treact/nodes/9/info
        pathType: Prefix
      - backend:
          service:
            name: treactor-ui
            port:
              number: 80
        path: /treact/reactions
        pathType: Prefix
      - backend:
          service:
            name: treactor-api
            port:
              number: 80
        path: /treact/info
        pathType: Prefix
      - backend:
          service:
            name: treactor-ui
            port:
              number: 80
        path: /static
        pathType: Prefix
